# Tron3D

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  LICENSE  README.md  open_project.bat
Doxygen/: Doxyfile
cmake/: FindBullet.cmake  FindFMOD.cmake  FindHIDAPI.cmake  FindOCULUS.cmake  FindOpenSceneGraph.cmake  FindRaknet.cmake  FindScriptzeug.cmake  FindV8.cmake  Findosg.cmake  FindosgAnimation.cmake  FindosgDB.cmake  FindosgFX.cmake  FindosgGA.cmake  FindosgParticle.cmake  FindosgShadow.cmake  FindosgText.cmake  FindosgUtil.cmake  FindosgViewer.cmake
scripts/: ai.js
shaders/: HBlur.vert  VBlur.vert  bike.frag  bike.vert  default.frag  default.vert  default_material.frag  fence.frag  fence.vert  gbuffer.frag  grid.frag  grid.vert  grid_noreflection.frag  outer_wall.frag  outer_wall.vert  postprocessing.frag  selectglowobjects.frag  skydome.frag
source/: CMakeLists.txt  Fmod_manager.cpp  Fmod_manager.h  bikeinputstate.h  constants.cpp  constants.h  fmod_manager.cpp  forwardDeclarations.h  forwarddeclarations.h  gameeventhandler.cpp  gameeventhandler.h  gamelogic.cpp  gamelogic.h  globals.h  keyboardeventhandler.cpp  keyboardeventhandler.h  main.cpp  mainwindow.cpp  mainwindow.h  osgwidget.cpp  osgwidget.h  physicsworld.h  player.cpp  player.h  resourcepool.cpp  resourcepool.h  sampleosgviewer.cpp  sampleosgviewer.h  troengame.cpp  troengame.h  troengamebuilder.cpp  troengamebuilder.h  updatebikepositioncallback.cpp  updatebikepositioncallback.h  viewer.cpp  viewer.h  viewerwidget.cpp  viewerwidget.h
source/controller/: abstractcontroller.cpp  abstractcontroller.h  bikecontroller.cpp  bikecontroller.h  fencecontroller.cpp  fencecontroller.h  fencemodel.cpp  fencemodel.h  hudcontroller.cpp  hudcontroller.h  itemcontroller.cpp  itemcontroller.h  levelcontroller.cpp  levelcontroller.h  ragdollcontroller.cpp  ragdollcontroller.h
source/input/: ai.cpp  ai.h  bikeinputstate.cpp  bikeinputstate.h  gamepad.cpp  gamepad.h  gamepadps4.cpp  gamepadps4.h  keyboard.cpp  keyboard.h  keyboardeventhandler.cpp  keyboardeventhandler.h  pollingdevice.cpp  pollingdevice.h  remoteplayer.cpp  remoteplayer.h
source/model/: Level 2.level  abstractmodel.cpp  abstractmodel.h  auto_levelmodel.cpp  auto_levelmodel2.cpp  bikemodel.cpp  bikemodel.h  bikemotionstate.h  fencemodel.cpp  fencemodel.h  itemmodel.cpp  itemmodel.h  levelmodel.cpp  levelmodel.h  objectinfo.h  physicsworld.cpp  physicsworld.h  ragdoll.cpp  ragdoll.h  ragdollmodel.cpp  ragdollmodel.h
source/network/: clientmanager.cpp  clientmanager.h  networkmanager.cpp  networkmanager.h  receiver.cpp  receiver.h  sender.cpp  sender.h  servermanager.cpp  servermanager.h
source/oculus/: oculusdevice.cpp
source/physics/: bike.cpp  bike.h  fence.cpp  fence.h  physicsworld.cpp  physicsworld.h
source/scripts/: ai.js  ps4.js
source/shaders/: Blur.frag  HBlur.vert  VBlur.vert  bike.frag  bike.vert  default.frag  default.vert  fence.frag  fence.vert  gbuffer.frag  gbuffer.vert  grid.frag  grid.vert  oculuseye.frag  oculuseye.vert  oculusmerge.frag  outer_wall.frag  outer_wall.vert  playermarker.frag  postprocessing.frag  selectglowobjects.frag  skydome.frag
source/sound/: audiomanager.cpp  audiomanager.h  fmod_manager.cpp  fmod_manager.h
source/util/: chronotimer.cpp  chronotimer.h  conversionutils.h  filteredrayresultcallback.h  find_minimal_bb_to_obj.py  gldebugdrawer.cpp  gldebugdrawer.h  obstacle_export.py  scaling_grow.py  scriptwatcher.h  selection_collisionProperty.py  selection_to_floor.py  semaphore.h
source/view/: abstractview.cpp  abstractview.h  auto_levelView.cpp  bikeview.cpp  bikeview.h  easemotion.h  fenceview.cpp  fenceview.h  hudview.cpp  hudview.h  itemview.cpp  itemview.h  levelview.cpp  levelview.h  motionblur.h  nearfarcallback.h  nodefollowcameramanipulator.cpp  nodefollowcameramanipulator.h  playermarker.cpp  playermarker.h  postprocessing.cpp  postprocessing.h  ragdollview.cpp  ragdollview.h  reflection.cpp  reflection.h  shaders.cpp  shaders.h  skydome.cpp  skydome.h  timeupdate.h
